# ShockLens

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REFERENCES.md  comprehensive_smoke_test.py  pyproject.toml
docs/: ASSIMILATION.md  CASE_SETUP.md  PORTING.md
examples/compressionRamp_2D/: README.md  case.yml
examples/compressionRamp_2D/case/: Allclean  Allrun
examples/compressionRamp_2D/case/0/: T  U  p
examples/compressionRamp_2D/case/constant/: thermophysicalProperties  turbulenceProperties
examples/compressionRamp_2D/case/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
examples/forwardStep_Ma3/: README.md
examples/wedge_oblique/: README.md  case.yml  run_and_extract.sh
examples/wedge_oblique/case/: Allclean  Allrun
shocklens/: __init__.py  assimilate.py  backend.py  bos.py  cli.py  config.py  detect.py  forecast.py  io.py  metrics.py  models.py  pinn.py  plots.py  rankinehugoniot.py  separation.py  synthetic.py  track.py
tests/: test_assimilate.py  test_bos.py  test_config.py  test_detect.py  test_extensibility.py  test_flagship.py  test_forecast.py  test_ml.py  test_model_io.py  test_rankinehugoniot.py  test_run_case_full.py  test_separation.py  test_track.py
